--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10889,7 +10889,29 @@ body {
   font-weight: normal;
 }
 
-nav.navbar.navbar-expand-lg {
+nav.navbar.navbar-expand-md {
   margin-bottom: 20px;
+}
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+footer a {
+  color: #555;
+}
+
+footer a:hover {
+  color: #222;
+}
+
+footer img.brand-icon {
+  width: 17px;
+  height: 17px;
 }
 
