--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,28 @@ body{
     font-size: 14px;
     font-weight: normal;
 }
-nav.navbar.navbar-expand-lg{
+nav.navbar.navbar-expand-md{
     margin-bottom:20px;
+}
+
+footer{
+    margin-top: 45px;
+    padding-top: 5px;
+    border-top: 1px solid #eaeaea;
+    color: #777;
+    font-size: 13px;
+    font-weight: bold;
+
+    a{
+        color: #555;
+    }
+
+    a:hover{
+        color: #222;
+    }
+    img.brand-icon{
+        width: 17px;
+        height: 17px;
+    }
+
 }
