--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10915,3 +10915,29 @@ footer img.brand-icon {
   height: 17px;
 }
 
+/* user gravatar */
+
+section.user-info {
+  padding-bottom: 10px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+section.user-info .gravatar {
+  max-width: 70px;
+  float: none;
+}
+
+section.user-info h1 {
+  font-size: 1.4rem;
+  letter-spacing: -1px;
+  margin-bottom: 3px;
+  margin-top: 15px;
+}
+
+.gravatar {
+  float: left;
+  max-width: 50px;
+  border-radius: 50%;
+}
+
