--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -30,3 +30,28 @@ footer{
     }
 
 }
+
+/* user gravatar */
+
+section.user-info{
+    padding-bottom: 10px;
+    margin-top: 20px;
+    text-align: center;
+
+    .gravatar{
+        max-width: 70px;
+        float: none;
+    }
+    h1{
+        font-size: 1.4rem;
+        letter-spacing: -1px;
+        margin-bottom: 3px;
+        margin-top: 15px;
+    }
+}
+
+.gravatar{
+    float: left;
+    max-width: 50px;
+    border-radius: 50%;
+}
