--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10937,7 +10937,16 @@ section.user-info h1 {
 
 .gravatar {
   float: left;
-  max-width: 50px;
   border-radius: 50%;
+}
+
+.gravatar-edit {
+  margin: 15px auto;
+  text-align: center;
+}
+
+.gravatar-edit .gravatar {
+  float: none;
+  max-width: 100px;
 }
 
