--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -54,3 +54,11 @@ section.user-info{
     float: left;
     border-radius: 50%;
 }
+.gravatar-edit{
+    margin:15px auto;
+    text-align: center;
+    .gravatar{
+        float: none;
+        max-width: 100px;
+    }
+}
